aggiunto titolo e paragrafo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 </head>
 <body>
     <main>
-        
+        <section class="container">
+            <div class="titolo">
+                <h1>Meet Our Team</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, recusandae ullam neque obcaecati error sed delectus dolores dignissimos quidem maiores corporis amet dolorum illum suscipit qui itaque soluta veritatis officiis?</p>
+            </div>
+            
+        </section>
     </main>
 </body>
 </html>
