--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
                 <h1>Meet Our Team</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, recusandae ullam neque obcaecati error sed delectus dolores dignissimos quidem maiores corporis amet dolorum illum suscipit qui itaque soluta veritatis officiis?</p>
             </div>
-            
+            <div class="clearfix">
+                <div class="card">
+                    <img class="foto" src="img/male1.png" alt="Foto Marco">
+                    <div class="info">
+                        <h2 class="padding">MARCO BIANCHI</h2>
+                        <h3 class="padding">Designer</h3>
+                        <a href="mailto:someone@yoursite.com">marcobianchi@team.com</a>
+                    </div>
+                </div>
+            </div>            
         </section>
     </main>
 </body>
