aggiunte tutte le cards

--- a/index.html
+++ b/index.html
@@ -26,6 +26,46 @@
                         <a href="mailto:someone@yoursite.com">marcobianchi@team.com</a>
                     </div>
                 </div>
+                <div class="card">
+                    <img class="foto" src="img/female1.png" alt="Foto Laura">
+                    <div class="info">
+                        <h2 class="padding">LAURA ROSSI</h2>
+                        <h3 class="padding">Front-end Developer</h3>
+                        <a href="mailto:someone@yoursite.com">laurarossi@team.com</a>
+                    </div>
+                </div>
+                <div class="card rowend">
+                    <img class="foto" src="img/male2.png" alt="Foto Giorgio">
+                    <div class="info">
+                        <h2 class="padding">GIORGIO VERDI</h2>
+                        <h3 class="padding">Back-end Developer</h3>
+                        <a href="mailto:someone@yoursite.com">giorgioverdi@team.com</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="foto" src="img/female2.png" alt="Foto Marta">
+                    <div class="info">
+                        <h2 class="padding">MARTA IPSUM</h2>
+                        <h3 class="padding">Seo Specialist</h3>
+                        <a href="mailto:someone@yoursite.com">martaipsum@team.com</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="foto" src="img/male3.png" alt="Foto Roberto">
+                    <div class="info">
+                        <h2 class="padding">ROBERTO LOREM</h2>
+                        <h3 class="padding">Project Manager</h3>
+                        <a href="mailto:someone@yoursite.com">robertolorem@team.com</a>
+                    </div>
+                </div>
+                <div class="card rowend">
+                    <img class="foto" src="img/female3.png" alt="Foto Daniela">
+                    <div class="info">
+                        <h2 class="padding">DANIELA AMET</h2>
+                        <h3 class="padding">Analyst</h3>
+                        <a href="mailto:someone@yoursite.com">danielaamet@team.com</a>
+                    </div>
+                </div>
             </div>            
         </section>
     </main>
