--- a/index.html
+++ b/index.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <!-- /link font -->
     <link rel="stylesheet" href="css/style.css">
     <title>Screen Float Cards</title>
 </head>
 <body>
     <main>
         <section class="container">
+            <!-- Titolo e paragrafo -->
             <div class="titolo">
                 <h1>Meet Our Team</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, recusandae ullam neque obcaecati error sed delectus dolores dignissimos quidem maiores corporis amet dolorum illum suscipit qui itaque soluta veritatis officiis?</p>
             </div>
+            <!-- /Titolo e paragrafo -->
+            <!-- Cards -->
             <div class="clearfix">
+                <!-- Card 1 -->
                 <div class="card">
                     <img class="foto" src="img/male1.png" alt="Foto Marco">
                     <div class="info">
@@ -26,6 +32,8 @@
                         <a href="mailto:someone@yoursite.com">marcobianchi@team.com</a>
                     </div>
                 </div>
+                <!-- /Card 1-->
+                <!-- Card 2-->
                 <div class="card">
                     <img class="foto" src="img/female1.png" alt="Foto Laura">
                     <div class="info">
@@ -34,6 +42,8 @@
                         <a href="mailto:someone@yoursite.com">laurarossi@team.com</a>
                     </div>
                 </div>
+                <!-- /Card 2-->
+                <!-- Card 3-->
                 <div class="card rowend">
                     <img class="foto" src="img/male2.png" alt="Foto Giorgio">
                     <div class="info">
@@ -42,6 +52,8 @@
                         <a href="mailto:someone@yoursite.com">giorgioverdi@team.com</a>
                     </div>
                 </div>
+                <!-- /Card 3-->
+                <!-- Card 4-->
                 <div class="card">
                     <img class="foto" src="img/female2.png" alt="Foto Marta">
                     <div class="info">
@@ -50,6 +62,8 @@
                         <a href="mailto:someone@yoursite.com">martaipsum@team.com</a>
                     </div>
                 </div>
+                <!-- /Card 4-->
+                <!-- Card 5 -->
                 <div class="card">
                     <img class="foto" src="img/male3.png" alt="Foto Roberto">
                     <div class="info">
@@ -58,6 +72,8 @@
                         <a href="mailto:someone@yoursite.com">robertolorem@team.com</a>
                     </div>
                 </div>
+                <!-- /Card 5 -->
+                <!-- Card 6 -->
                 <div class="card rowend">
                     <img class="foto" src="img/female3.png" alt="Foto Daniela">
                     <div class="info">
@@ -66,7 +82,9 @@
                         <a href="mailto:someone@yoursite.com">danielaamet@team.com</a>
                     </div>
                 </div>
-            </div>            
+                <!-- /Card 6 -->
+            </div>
+            <!-- Cards -->            
         </section>
     </main>
 </body>
