--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link font -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- /link font -->
     <link rel="stylesheet" href="css/style.css">
     <title>Screen Float Cards</title>
@@ -16,14 +18,18 @@
     <main>
         <section class="container">
             <!-- Titolo e paragrafo -->
+
             <div class="titolo">
                 <h1>Meet Our Team</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, recusandae ullam neque obcaecati error sed delectus dolores dignissimos quidem maiores corporis amet dolorum illum suscipit qui itaque soluta veritatis officiis?</p>
             </div>
+
             <!-- /Titolo e paragrafo -->
             <!-- Cards -->
-            <div class="clearfix">
+
+            <div class="cards clearfix">
                 <!-- Card 1 -->
+
                 <div class="card">
                     <img class="foto" src="img/male1.png" alt="Foto Marco">
                     <div class="info">
@@ -32,58 +38,70 @@
                         <a href="mailto:someone@yoursite.com">marcobianchi@team.com</a>
                     </div>
                 </div>
+
                 <!-- /Card 1-->
                 <!-- Card 2-->
+
                 <div class="card">
                     <img class="foto" src="img/female1.png" alt="Foto Laura">
                     <div class="info">
-                        <h2 class="padding">LAURA ROSSI</h2>
-                        <h3 class="padding">Front-end Developer</h3>
+                        <h2>LAURA ROSSI</h2>
+                        <h3>Front-end Developer</h3>
                         <a href="mailto:someone@yoursite.com">laurarossi@team.com</a>
                     </div>
                 </div>
+
                 <!-- /Card 2-->
                 <!-- Card 3-->
-                <div class="card rowend">
+
+                <div class="card">
                     <img class="foto" src="img/male2.png" alt="Foto Giorgio">
                     <div class="info">
-                        <h2 class="padding">GIORGIO VERDI</h2>
-                        <h3 class="padding">Back-end Developer</h3>
+                        <h2>GIORGIO VERDI</h2>
+                        <h3>Back-end Developer</h3>
                         <a href="mailto:someone@yoursite.com">giorgioverdi@team.com</a>
                     </div>
                 </div>
+
                 <!-- /Card 3-->
                 <!-- Card 4-->
+
                 <div class="card">
                     <img class="foto" src="img/female2.png" alt="Foto Marta">
                     <div class="info">
-                        <h2 class="padding">MARTA IPSUM</h2>
-                        <h3 class="padding">Seo Specialist</h3>
+                        <h2>MARTA IPSUM</h2>
+                        <h3>Seo Specialist</h3>
                         <a href="mailto:someone@yoursite.com">martaipsum@team.com</a>
                     </div>
                 </div>
+
                 <!-- /Card 4-->
                 <!-- Card 5 -->
+
                 <div class="card">
                     <img class="foto" src="img/male3.png" alt="Foto Roberto">
                     <div class="info">
-                        <h2 class="padding">ROBERTO LOREM</h2>
-                        <h3 class="padding">Project Manager</h3>
+                        <h2>ROBERTO LOREM</h2>
+                        <h3>Project Manager</h3>
                         <a href="mailto:someone@yoursite.com">robertolorem@team.com</a>
                     </div>
                 </div>
+
                 <!-- /Card 5 -->
                 <!-- Card 6 -->
-                <div class="card rowend">
+
+                <div class="card">
                     <img class="foto" src="img/female3.png" alt="Foto Daniela">
                     <div class="info">
-                        <h2 class="padding">DANIELA AMET</h2>
-                        <h3 class="padding">Analyst</h3>
+                        <h2> DANIELA AMET</h2>
+                        <h3> Analyst</h3>
                         <a href="mailto:someone@yoursite.com">danielaamet@team.com</a>
                     </div>
                 </div>
+
                 <!-- /Card 6 -->
             </div>
+
             <!-- Cards -->            
         </section>
     </main>
